<resources>
    <string name="app_name">Voot</string>

    <!-- Navigation strings -->
    <string name="sign_out">Sign out</string>

    <!-- Homepage strings -->
    <string name="Location">Location:</string>
    <string name="location_placeholder">Austin, TX 78705</string>
    <string name="Representatives">Representatives</string>
    <string name="Poll_Location">Poll Location</string>
    <string name="Upcoming_Elections">Upcoming Elections</string>
    <string name="Reminders">Reminders</string>
    <string name="user_name_placeholder">John Smith</string>
    <string name="header">header</string>

    <!-- Representatives Activity Strings -->
    <string name="Your_Representatives">Your Representatives</string>
    <string name="Your_Representative">Your Representative</string>
    <string name="city_state">City , State</string>
    <string name="find_representatives">Find Representatives</string>
    <string name="rep_instructions">You can enter a new address, or just press the button to use your saved address.</string>
    <string name="find_your">Find Your</string>

    <!-- Contact Rep Activity Strings -->
    <string name="rep_name_placeholder">Celia Israel (D)</string>
    <string name="rep_info_placeholder">Texas House Member\nDistrict 50\nEl Paso, TX</string>
    <string name="rep_img_placeholder">Image of representative</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="subject">Message from Voot User</string>
    <string name="email_body">Hello, I am one of your constituents and have some questions for you...</string>
    <string name="website">Website</string>

    <!--  Poll Locations Activity Strings -->
    <string name="poll_location">Poll Location</string>

    <!-- Upcoming Elections Activity Strings -->
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="google_civic_info_api_request_url">https://www.googleapis.com/civicinfo/v2/elections?key=AIzaSyDavSOAQc_B7Gaaj8cnL6EmPG2g9vgwlVU</string>
    <string name="first_election">No Polling Location Found!</string>

    <!-- Reminders Activity Strings -->
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="save_and_update">Save and Update</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="upcoming_election_reminders">Receive Upcoming Election Reminders</string>
    <string name="profile_info">Profile Info</string>

    <!-- Login/Sign-up Activity Strings -->
    <string name="signup_for_voot">Signup for Voot</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="default_state">TX</string>

    <!-- Success messages -->
    <string name="auth_success">Authentication successful!</string>
    <string name="signup_success">Sign-up successful!</string>

    <!-- Error messages -->
    <string name="auth_failed_error">Authentication failed, please try again later.</string>
    <string name="poll_failed_error">No poll location found.</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="no_trailing_white_space">Invalid password: contains trailing.</string>
    <string name="must_contain_at_least_one_uppercase_char">Password must contain at least one uppercase character.</string>
    <string name="must_contain_at_least_one_lowercase_char">Password must contain at least one lowercase character.</string>
    <string name="must_by_at_least_8_chars_long">Password must be at least 8 characters long.</string>
    <string name="must_contain_at_least_1_special_char">Password must contain at least 1 special character.</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="address_invalid">Address is invalid</string>
    <string name="please_enter_all_fields">Please enter all fields</string>
    <string name="loading">Loading...</string>

</resources>
