<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/elecCard"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="3dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/elecName"
            android:layout_alignParentTop="true"
            android:textSize="22sp"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>