...
        android:layout_marginTop="25dp"
        android:src="@drawable/voot_header"
        android:layout_gravity="center"
        android:contentDescription="@string/header"/>

    <TextView
        android:id="@+id/user_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/user_name_placeholder"/>
...
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Representatives"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/elections_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
...
